Tests/a1/reject/03.ul
int[2] main (int x int y) {
	a;
}